data/usersCode/CoderRappers/question3/error.txt
/home/gauravghati/clash2/data/usersCode/CoderRappers/question3/code3-1.cpp:1:1: error: ‘deasdshhdshh’ does not name a type
 deasdshhdshh
 ^~~~~~~~~~~~
